--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "express-async-errors": "^3.0.0",
     "mongoose": "^5.2.5",
+    "mongoose-mongodb-errors": "0.0.2",
     "morgan": "^1.9.0",
     "nodemon": "^1.18.3"
   }
